force-app/main/default/objects/News__c/fields/Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Access_Level__c</fullName>
    <label>Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>World</fullName>
            </value>
            <value>
                <fullName>Continent</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>State/Territory</fullName>
            </value>
            <value>
                <fullName>Market</fullName>
            </value>
            <value>
                <fullName>Submarket</fullName>
            </value>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>Building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>