force-app/main/default/objects/News__c/fields/Access_Market__c.field-meta.xml
<CustomField>
    <fullName>Access_Market__c</fullName>
    <formula>IF(ISPICKVAL(Access_Level__c,&apos;World&apos;),&apos;All&apos;,
IF(ISPICKVAL(Access_Level__c,&apos;Continent&apos;), TEXT(Continent__c) , 
IF(ISPICKVAL(Access_Level__c,&apos;Country&apos;),TEXT( Country__c ),
IF(ISPICKVAL(Access_Level__c,&apos;State/Territory&apos;),TEXT( State__c ), 
IF(ISPICKVAL(Access_Level__c,&apos;Market&apos;),TEXT( Market__c ),
IF(ISPICKVAL(Access_Level__c,&apos;Submarket&apos;),TEXT( Submarket__c ),
IF(ISPICKVAL(Access_Level__c,&apos;City&apos;), City__c ,
IF(ISPICKVAL(Access_Level__c,&apos;Building&apos;), Building__r.Name   ,
&quot;&quot;))))))))</formula>
    <label>Access Market</label>
    <type>Text</type>
</CustomField>