force-app/main/default/objects/News__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Leave blank if N/A</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>News</relationshipLabel>
    <relationshipName>News</relationshipName>
    <type>Lookup</type>
</CustomField>