force-app/main/default/objects/News__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Leave blank if N/A</inlineHelpText>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>News</relationshipLabel>
    <relationshipName>News</relationshipName>
    <type>Lookup</type>
</CustomField>