force-app/main/default/objects/News__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Continent__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Country1</fullName>
            </value>
            <value>
                <fullName>Country2</fullName>
            </value>
            <value>
                <fullName>Country3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>