force-app/main/default/objects/News__c/fields/Headline__c.field-meta.xml
<CustomField>
    <fullName>Headline__c</fullName>
    <label>Headline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>