force-app/main/default/objects/News__c/fields/News_Type__c.field-meta.xml
<CustomField>
    <fullName>News_Type__c</fullName>
    <label>News Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Building Sale</fullName>
            </value>
            <value>
                <fullName>Building Renovation</fullName>
            </value>
            <value>
                <fullName>Building Construction</fullName>
            </value>
            <value>
                <fullName>Vacancy Added</fullName>
            </value>
            <value>
                <fullName>Vacancy Removed</fullName>
            </value>
            <value>
                <fullName>Rental Rate Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>