force-app/main/default/objects/News__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Source_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Axios</fullName>
            </value>
            <value>
                <fullName>Commercial Observer</fullName>
            </value>
            <value>
                <fullName>Costar</fullName>
            </value>
            <value>
                <fullName>John Murray</fullName>
            </value>
            <value>
                <fullName>LA Times</fullName>
            </value>
            <value>
                <fullName>NY Times</fullName>
            </value>
            <value>
                <fullName>See Broker Field</fullName>
            </value>
            <value>
                <fullName>Taylor Aronson</fullName>
            </value>
            <value>
                <fullName>The Real Deal</fullName>
            </value>
            <value>
                <fullName>WSJ</fullName>
            </value>
            <value>
                <fullName>Yahoo Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>