force-app/main/default/objects/News__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Article</fullName>
            </value>
            <value>
                <fullName>Costar Change</fullName>
            </value>
            <value>
                <fullName>Heard on the Street</fullName>
            </value>
            <value>
                <fullName>Seen on the Street</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>