force-app/main/default/objects/News__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Leave blank if N/A</inlineHelpText>
    <label>Tenant</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>News</relationshipLabel>
    <relationshipName>News</relationshipName>
    <type>Lookup</type>
</CustomField>